--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -62,4 +62,11 @@ a {
             }
         }
     }
+    
+    .home {
+        .profile-picture {
+            width: 50vw;
+            height: auto;
+        }
+    }
 }
