--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -5,56 +5,64 @@
     align-items: center;
     width: 100%;
     height: 92vh;
-    background: rgb(191, 180, 170);
-    // margin: 5rem;
 
-    .profile-picture {
-        border-radius: 50%;
-        width: 20vw;
-        height: auto;
-        overflow: hidden;
-        margin-bottom: 3rem;
-        border: 0.5rem dashed black;
-    }
-
-    .subtitle {
-        width: 45vw;
-        text-align: center;
-        margin: 2.5rem 0rem;
-    }
-
-    .logos {
-        text-decoration: none;
-        list-style: none;
+    .landing {
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
-        height: 5vh;
-        width: 10vw;
-        margin: 1rem 0rem;
-    }
+        height: 96%;
+        width: 98vw;
+        background: rgb(191, 180, 170);
 
-    .logo {
-        width: 3rem;
-        height: auto;
-        transition: transform .2s ease-in-out ;
-    }
-
-    .logo:hover {
-        transform: scale(1.2);
-    }
-
-    .breath{
-        color: rgba(217, 146, 130,100);
-        animation: breathing 2s ease-in-out 0s infinite;
-        animation-direction: alternate-reverse;
-    }
-
-    @keyframes breathing {
-        from {color: rgba(217, 146, 130,100);}
-        to {color: rgba(217, 146, 130,0);}
-    }
+        .profile-picture {
+            border-radius: 50%;
+            width: 20vw;
+            height: auto;
+            overflow: hidden;
+            margin-bottom: 3rem;
+            border: 0.5rem dashed black;
+        }
+    
+        .subtitle {
+            width: 45vw;
+            text-align: center;
+            margin: 2.5rem 0rem;
+        }
+    
+        .logos {
+            text-decoration: none;
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+            height: 5vh;
+            width: 10vw;
+            margin: 1rem 0rem;
+        }
+    
+        .logo {
+            width: 3rem;
+            height: auto;
+            transition: transform .2s ease-in-out ;
+        }
+    
+        .logo:hover {
+            transform: scale(1.2);
+        }
+    
+        .breath{
+            color: rgba(217, 146, 130,100);
+            animation: breathing 2s ease-in-out 0s infinite;
+            animation-direction: alternate-reverse;
+        }
+    
+        @keyframes breathing {
+            from {color: rgba(217, 146, 130,100);}
+            to {color: rgba(217, 146, 130,0);}
+        }
+    }   
 }
 
 .navigation-container {
@@ -69,10 +77,10 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+        padding: 0rem 3rem;
 
         h1 {
             flex: 3;
-            margin-left: 3rem;
         }
 
         ul {
@@ -81,7 +89,17 @@
             flex-direction: row;
             list-style: none;
             align-items: center;
-            justify-content: space-evenly;
+            justify-content: space-between;
+            padding: 0rem 3rem;
+
+            a {
+                padding: 2rem 4rem;
+                transition: background .5s ease-in-out;
+            }
+
+            a:hover {
+                background: grey;
+            }
         }
     }
 }
