--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,22 +6,24 @@
 
 html {
     font-size: 62.5%;
-    color: white;
+    color: rgb(13, 40, 64);
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Crimson Text', serif;
 }
 
 h1{
-    font-size: 2.5rem;
-    font-family: 'Roboto Mono', monospace;
+    font-size: 3rem;
+    font-family: 'Crimson Text', serif;
     font-weight: lighter;
+    color: rgb(242, 242, 242);
 }
 
 h2{
-    font-size: 8rem;
+    font-size: 5rem;
     font-family: 'Roboto Mono', monospace;
+    font-weight: 100;
 }
 
 h3 {
@@ -33,40 +35,22 @@ h4 {
 }
 
 p{
-    font-size: 2.5rem;
+    font-size: 3rem;
 }
 
 li {
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 a {
-    color: white;
+    color: rgb(242, 242, 242);
     text-decoration: none;
 }
 
 @import 'home';
 
-@media screen and (max-width: 1200px){
+@media only screen and (max-width: 768px){
     html {
         font-size: 50%;
-    }
-
-    nav {
-        h1 {
-            flex: 1;
-        }
-        ul {
-            li {
-                margin-left: 5rem;
-            }
-        }
-    }
-    
-    .home {
-        .profile-picture {
-            width: 50vw;
-            height: auto;
-        }
     }
 }
