--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -31,6 +31,12 @@
             padding-top: 3rem;
         }
     }
+    .home-btns {
+        padding-top: 1rem;
+        grid-template-columns: repeat(1, 1fr) !important;
+        align-items: center !important;
+        gap: 1rem !important;
+    }
     .header-content .left-header .image{
         margin: 0 auto;
         width: 90%;
