--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -199,8 +199,7 @@ section {
         }
         .home-btns {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 2rem;
+            grid-template-columns: repeat(2, .5fr);
         }
     }
 }
